# calc_mvp

./: Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
.sqlx/: query-5fbf7beba429a38cfdef6feac1d148fc5b9a2bf2cfbcd58d218afddca6502c63.json
manifest/: manifest.yaml
src/: main.rs  slack.rs
