[package]
name = "calc_mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls","rust_decimal"] }
tokio = {version = "*",features = ["full"]}
dotenv = "*"